--- a/jackyun/camel-integrations.mdx
+++ b/jackyun/camel-integrations.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Camel Integrations"
 description: "Technical integration spec for Jackyun → BatchStation order flow"
-mode: "wide"
+mode: "custom"
 ---
 
 # Jackyun Pick Flow - Camel Integrations
