--- a/jackyun/pick-print-process.mdx
+++ b/jackyun/pick-print-process.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Pick and Print Process"
 description: "End-to-end pick and print workflow for KH fulfillment"
-mode: "custom"
+mode: "wide"
 ---
 
 # Jackyun Pick and Print Process
